Added Docker to the project